welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value a
  return ((a>=40 && a<=60 && !isWeekend) || (isWeekend && a>=40))
           ^cigarParty:2: error: not found: value a
  return ((a>=40 && a<=60 && !isWeekend) || (isWeekend && a>=40))
                    ^cigarParty:2: error: not found: value a
  return ((a>=40 && a<=60 && !isWeekend) || (isWeekend && a>=40))
                                                          ^