welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  return ((a>=40 && a<=60 && !isWeekend) || (isWeekend && a>=40))
}

def cig(a:Int):Boolean={
  if (a>=40 && a<=60) {return true}
  else {return false}
}

def cigwe(a:Int): Boolean ={
  return (a>=40)
}